2008-10-23  Neal H. Walfield  <neal@gnu.org>

	* util.h (difflocaltime): New declaration.
	* util.c (difflocaltime): New function.
	* day_view.c (time_layout): Replace paramter hour with parameter
	time.  Update users.  Use the local time to calculate the hour.
	(hour_bar_calc): Use difflocaltime when calculating the position
	of the hour bar.
	(reload_events_hard): Use difflocaltime when calculating
	DAY_VIEW->VISIBLE_DURATION.

2008-10-23  Neal H. Walfield  <neal@gnu.org>

	* event-ui.h: Include <stdbool.h>.
	(edit_event): Add parameter remove_event_on_cancel.  Update users.
	* event-ui.c (struct edit_state): Add field
	remove_event_on_cancel.
	(destroy_user_data): If it is true, remove S->EV.
	(click_ok): Clear it.
	(edit_event): Take additional parameter remove_event_on_cancel.
	Set S->REMOVE_EVENT_ON_CANCEL to it.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* inotify-syscalls.h: Remove file.
	* Makefile.am (libgpe_calendar_applet_la_SOURCES): Remove
	inotify-syscalls.h.
	* hildon-applet.c: Don't include <linux/inotify.h> or
	"inotify-syscalls.h".  Include <sys/inotify.h>.
	Patch by Adrian Bunk <bunk@stusta.de>.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (calc_events_positions): Fix off-by-one error.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* event-menu.c (event_menu_new): Fix off-by-one error.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* event-menu.c (edit_calendar_cb): New function.
	(event_menu_new): Create a duplicate menu item.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Depend on the libxsettings package.

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't depend on the esound package.

2008-09-05  Phil Blundell  <pb@reciva.com>

	* po/da.po: New translation, courtesy Joe Hansen.

2008-08-14  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Close database after command line import

2008-08-14  Phil Blundell  <pb@reciva.com>
